<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <Button
        android:id="@+id/btnPlaceOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="108dp"
        android:layout_marginTop="69dp"
        android:text="@string/btnOrder" />

    <Button
        android:id="@+id/btnViewReservations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="134dp"
        android:text="@string/view_reserve" />

    <Button
        android:id="@+id/btnQueue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/btnViewReservations"
        android:layout_marginTop="200dp"
        android:text="@string/inqueue_customers" />

    <Button
        android:id="@+id/btnViewTables"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btnPlaceOrder"
        android:layout_marginBottom="248dp"
        android:text="@string/view_tables" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btnPlaceOrder"
        android:layout_marginBottom="186dp"
        android:text="@string/btn_search" />
</RelativeLayout>